module/core/mod_interface/tests/inc/derive/layer_unknown_vis/trybuild.stderr
error: expected one of: `mod`, `use`, `layer`, `reuse`
 --> tests/inc/derive/layer_unknown_vis/mod.rs
  |
  |   xyz layer layer_a;
  |   ^^^
